# almide-lander

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  almide.toml  almide_mathlib.py  interface.json  source.rs
.almide/cache/: src_main_almd.hash
.github/workflows/: ci.yml
examples/c-ffi/: Cargo.toml  README.md  test_mathlib.c
examples/c-ffi/src/: lib.rs
examples/nodejs-napi/: Cargo.toml  README.md  package.json  test_mathlib.cjs
examples/nodejs-napi/src/: lib.rs
examples/python-pyo3/: Cargo.toml  README.md  almide_mathlib.pyi  lib.rs  test_mathlib.py
examples/python-uniffi/: README.md  test_mathlib.py
examples/ruby-magnus/: Cargo.toml  README.md  test_mathlib.rb
examples/ruby-magnus/src/: lib.rs
examples/swift-uniffi/: Cargo.toml  README.md  test_mathlib.swift
examples/swift-uniffi/src/: lib.rs
examples/wasm-js/: README.md  almide_mathlib.ts  test_mathlib.ts
generators/: generate_c_ffi.almd  generate_c_ffi.py  generate_magnus.almd  generate_magnus.py  generate_napi.almd  generate_napi.py  generate_pyo3.almd  generate_pyo3.py  generate_python.almd  generate_uniffi.almd  generate_uniffi.py  generate_wasm_js.almd  generate_wasm_js.py  lander.almd
sample/: README.md  interface.json  mathlib.almd  mathlib.rs  mathlib.wasm
spec/: lander_test.almd
src/: lib.rs  main.almd  mod.almd
test/: lander_test.almd  mathlib.almd
